force-app/main/default/objects/ssot__AcademicSessionAttendance__dlm/fields/ssot__AcademicSessionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicSessionId__c</fullName>
    <label>Academic Session</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicSessionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>