force-app/main/default/objects/ssot__AcademicSessionAttendance__dlm/fields/ssot__ExcusedAbsenceReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExcusedAbsenceReason__c</fullName>
    <label>Excused Absence Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExcusedAbsenceReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>