force-app/main/default/objects/ssot__AcademicSessionAttendance__dlm/fields/ssot__rel_1719817597786_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817597786_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicSessionAttendance_AcademicSe_rel</label>
    <referenceTo>ssot__AcademicSession__dlm</referenceTo>
    <relationshipLabel>AcademicSessionAttendance_AcademicSe_rel</relationshipLabel>
    <relationshipName>rel_1719817597786_end</relationshipName>
    <type>Lookup</type>
</CustomField>