force-app/main/default/objects/ssot__AcademicSessionAttendance__dlm/fields/ssot__rel_1720291155388_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291155388_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicSessionAttendance_ContactId__rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>AcademicSessionAttendance_ContactId__rel</relationshipLabel>
    <relationshipName>rel_1720291155388_end</relationshipName>
    <type>Lookup</type>
</CustomField>